--- a/current-training/programming/maquette-1/style.css
+++ b/current-training/programming/maquette-1/style.css
@@ -1,11 +1,26 @@
+/* ----- VARIABLES ----- */
 :root {
   --container-width: 1100px;
+
+  --main-color: white;
+  --alternate-color: #c7c7c7;
+  --secondary-color: #c9a47e;
+  --dark-gold: #606060;
+  --dark-grey: #272727;
+
+  --gap-xs: 4px;
+  --gap-s: 8px;
+  --gap-m: 16px;
+  --gap-l: 32px;
+  --gap-xl: 64px;
+  --gap-xxl: 128px;
 }
+/* ----- VARIABLES ----- */
 
 body {
   max-width: 100vw;
   min-height: 100vh;
-  font-size: 16px;
+  font-size: var(--gap-m);
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
@@ -24,7 +39,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  color: white;
+  color: var(--main-color);
 }
 
 .header-nav {
@@ -58,7 +73,7 @@ li {
 }
 
 .link:hover {
-  color: #c9a47e;
+  color: var(--secondary-color);
 }
 
 .link::after {
@@ -66,8 +81,8 @@ li {
   display: block;
   width: 0%;
   height: 2px;
-  margin-top: 8px;
-  background-color: #c9a47e;
+  margin-top: var(--gap-s);
+  background-color: var(--secondary-color);
   transform: scale(0);
   transition: width 0.7s ease-in-out;
   position: absolute;
@@ -82,7 +97,7 @@ li {
 }
 
 .link {
-  padding: 16px 32px;
+  padding: var(--gap-m) var(--gap-l);
   display: block;
   text-align: center;
   position: relative;
@@ -94,22 +109,22 @@ li {
 }
 
 a {
-  color: white;
+  color: var(--main-color);
   text-decoration: none;
   text-transform: uppercase;
 }
 
 .header-content {
   width: var(--container-width);
-  padding-top: 128px;
-  padding-bottom: 128px;
+  padding-top: var(--gap-xxl);
+  padding-bottom: var(--gap-xxl);
 }
 
 .header-right-content {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding-right: 64px;
+  padding-right: var(--gap-xl);
 }
 
 .text-content {
@@ -117,39 +132,39 @@ a {
 }
 
 header h1 {
-  font-size: 64px;
+  font-size: var(--gap-xl);
   font-weight: 100;
-  line-height: 64px;
+  line-height: var(--gap-xl);
   text-transform: uppercase;
-  margin-bottom: 32px;
+  margin-bottom: var(--gap-l);
 }
 
 header p {
   line-height: 20px;
-  margin-bottom: 32px;
+  margin-bottom: var(--gap-l);
 }
 
 .header-btn {
   width: fit-content;
   display: flex;
-  background-color: #c9a47e;
+  background-color: var(--secondary-color);
   border-radius: 50px;
-  padding: 8px 16px;
-  gap: 4px;
+  padding: var(--gap-s) var(--gap-m);
+  gap: var(--gap-xs);
   text-transform: uppercase;
   font-weight: bold;
-  color: white;
+  color: var(--main-color);
   letter-spacing: 2px;
 }
 
 .header-btn:hover {
-  background-color: #606060;
+  background-color: var(--dark-gold);
   font-style: italic;
-  color: #c9a47e;
+  color: var(--secondary-color);
 }
 
 .header-btn:hover .btn-text {
-  color: #c9a47e;
+  color: var(--secondary-color);
 }
 
 .header-btn img {
@@ -166,7 +181,7 @@ header p {
 
 /* ----- MAIN ----- */
 main {
-  background-color: #606060;
+  background-color: var(--dark-gold);
 }
 
 .section-content {
@@ -177,12 +192,12 @@ main {
 }
 
 h4 {
-  color: white;
+  color: var(--main-color);
   font-weight: 500;
 }
 
 .text-style {
-  color: #c7c7c7;
+  color: var(--alternate-color);
   font-weight: 200;
   font-size: 14px;
   padding-bottom: 20px;
@@ -190,30 +205,30 @@ h4 {
 }
 
 .text-style-gold {
-  color: #c9a47e;
+  color: var(--secondary-color);
   font-size: 14px;
 }
 
 .mid-text-content {
-  border-left: 4px solid #c9a47e;
-  padding-left: 64px;
+  border-left: var(--gap-xs) solid var(--secondary-color);
+  padding-left: var(--gap-xl);
 }
 
 span {
-  color: white;
+  color: var(--main-color);
 }
 
 main h1 {
   text-transform: uppercase;
   font-size: 36px;
   text-align: center;
-  margin-bottom: 64px;
+  margin-bottom: var(--gap-xl);
 }
 
 .about-hall,
 .about-services {
-  background-color: #272727;
-  color: #c9a47e;
+  background-color: var(--dark-grey);
+  color: var(--secondary-color);
 }
 
 .about-hall,
@@ -222,15 +237,15 @@ main h1 {
   max-width: var(--container-width);
   margin: 0 auto;
   justify-content: center;
-  padding: 64px;
+  padding: var(--gap-xl);
 }
 
 .about-projects {
-  background-color: #c9a47e;
+  background-color: var(--secondary-color);
 }
 
 .about-projects h1 {
-  color: #272727;
+  color: var(--dark-grey);
 }
 
 .content-image {
@@ -248,11 +263,11 @@ main h1 {
 
 .london {
   position: absolute;
-  background-color: #c9a47e;
-  padding: 4px 8px;
+  background-color: var(--secondary-color);
+  padding: var(--gap-xs) var(--gap-s);
   text-transform: uppercase;
-  left: 16px;
-  bottom: -16px;
+  left: var(--gap-m);
+  bottom: -var(--gap-m);
 }
 
 .projects-section-content,
@@ -269,7 +284,7 @@ main h1 {
   justify-content: space-between;
   background-image: url(Images/paris.jpg);
   background-size: cover;
-  padding: 32px;
+  padding: var(--gap-l);
 }
 
 .second-flyer {
@@ -279,7 +294,7 @@ main h1 {
   justify-content: space-between;
   background-image: url(Images/london.jpg);
   background-size: cover;
-  padding: 32px;
+  padding: var(--gap-l);
 }
 
 .projects-section-text {
@@ -287,30 +302,30 @@ main h1 {
 }
 
 .projects-section-text img {
-  padding-bottom: 64px;
+  padding-bottom: var(--gap-xl);
 }
 
 .title-style {
-  color: #c9a47e;
-  line-height: 32px;
+  color: var(--secondary-color);
+  line-height: var(--gap-l);
   text-transform: uppercase;
 }
 
 .title-second-style {
-  color: #272727;
+  color: var(--dark-grey);
   text-transform: uppercase;
-  padding-bottom: 32px;
+  padding-bottom: var(--gap-l);
 }
 
 .date {
   width: fit-content;
-  padding: 4px 8px;
-  background-color: #272727;
+  padding: var(--gap-xs) var(--gap-s);
+  background-color: var(--dark-grey);
   border-radius: 2px;
 }
 
 .about-projects h3 {
-  color: white;
+  color: var(--main-color);
   font-weight: 300;
   text-transform: uppercase;
 }
@@ -327,7 +342,7 @@ main h1 {
 
 .services-left-content img,
 .services-middle-content img {
-  margin-bottom: 32px;
+  margin-bottom: var(--gap-l);
 }
 
 .services-middle-content img {
@@ -336,28 +351,28 @@ main h1 {
 
 .services-left-content p,
 .services-middle-content p {
-  margin-top: 32px;
-  margin-bottom: 32px;
-  color: #606060;
+  margin-top: var(--gap-l);
+  margin-bottom: var(--gap-l);
+  color: var(--dark-gold);
   font-weight: 600;
 }
 
 .services-left-content button,
 .services-middle-content button {
-  background-color: #606060;
-  color: #c9a47e;
+  background-color: var(--dark-gold);
+  color: var(--secondary-color);
   font-weight: bold;
   text-transform: uppercase;
-  padding-left: 64px;
-  padding-right: 8px;
+  padding-left: var(--gap-xl);
+  padding-right: var(--gap-s);
   letter-spacing: 2px;
-  border-left: 4px solid #c9a47e;
+  border-left: var(--gap-xs) solid var(--secondary-color);
 }
 
 .services-left-content button:hover,
 .services-middle-content button:hover {
-  background-color: #c9a47e;
-  color: #c7c7c7;
+  background-color: var(--secondary-color);
+  color: var(--alternate-color);
   font-style: italic;
 }
 
@@ -367,16 +382,16 @@ main h1 {
 }
 
 .services-img img {
-  border-top: 2px solid #c9a47e;
-  border-bottom: 2px solid #c9a47e;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  margin-bottom: 32px;
+  border-top: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  padding-top: var(--gap-l);
+  padding-bottom: var(--gap-l);
+  margin-bottom: var(--gap-l);
 }
 
 .right-content-text {
   text-align: right;
-  color: white;
+  color: var(--main-color);
 }
 
 /* ----- MAIN ----- */
@@ -393,8 +408,8 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 64px;
-  padding-bottom: 64px;
+  padding-top: var(--gap-xl);
+  padding-bottom: var(--gap-xl);
 }
 
 .footer-content {
@@ -411,15 +426,15 @@ footer {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  color: white;
+  color: var(--main-color);
   text-transform: uppercase;
   font-size: 24px;
-  padding: 32px;
+  padding: var(--gap-l);
 }
 
 .left-content h1 {
-  font-size: 32px;
-  line-height: 32px;
+  font-size: var(--gap-l);
+  line-height: var(--gap-l);
 }
 
 .right-content {
@@ -429,16 +444,16 @@ footer {
   flex-direction: column;
   justify-content: space-around;
   background-color: rgba(0, 0, 0, 0.9);
-  padding: 16px;
+  padding: var(--gap-m);
 }
 
 input,
 textarea {
   min-width: 100%;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 4px;
-  color: #c7c7c7;
+  padding-top: var(--gap-xs);
+  padding-bottom: var(--gap-xs);
+  padding-left: var(--gap-xs);
+  color: var(--alternate-color);
   background-color: rgba(0, 0, 0, 0);
   border-bottom: 1px solid rgba(255, 255, 255, 0.419);
 }
@@ -446,22 +461,22 @@ textarea {
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
-  color: #c7c7c7;
+  color: var(--alternate-color);
 }
 
 footer button {
-  background-color: #c9a47e;
-  border-radius: 4px;
-  color: white;
+  background-color: var(--secondary-color);
+  border-radius: var(--gap-xs);
+  color: var(--main-color);
   text-transform: uppercase;
   font-weight: bold;
-  padding: 4px 16px;
+  padding: var(--gap-xs) var(--gap-m);
   letter-spacing: 2px;
 }
 
 footer button:hover {
-  background-color: #272727;
-  color: #c9a47e;
+  background-color: var(--dark-grey);
+  color: var(--secondary-color);
   font-style: italic;
 }
 
