--- a/current-training/programming/maquette-2/style.css
+++ b/current-training/programming/maquette-2/style.css
@@ -108,6 +108,9 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+  display: flex;
+  align-items: center;
+  padding: var(--space-l);
 }
 
 .category-img-container-left {
@@ -123,6 +126,7 @@ main {
 }
 
 .category-text {
+  width: 100%;
   border-top: 1px solid var(--secondary-color);
   border-bottom: 1px solid var(--secondary-color);
 }
@@ -138,10 +142,12 @@ span {
   flex-direction: column;
   gap: var(--space-m);
   align-items: center;
+  margin-bottom: var(--space-m);
 }
 
 .main-left,
 .main-right {
+  width: 300px;
   display: flex;
   flex-direction: column;
   gap: var(--space-m);
@@ -149,14 +155,14 @@ span {
 }
 
 .section-title {
-  width: 300px;
+  width: 100%;
   text-align: center;
   border-top: 1px solid var(--secondary-color);
   border-bottom: 1px solid var(--secondary-color);
 }
 
 .recipe-card {
-  width: 300px;
+  max-width: 300px;
   height: auto;
 }
 
@@ -169,9 +175,18 @@ span {
 }
 
 .recipe-card-content {
+  position: relative;
   background-color: var(--recipe-bg-color);
   text-align: center;
   padding: var(--space-l);
+}
+
+.badge-image {
+  position: absolute;
+  top: -35px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 .recipe-card-content p {
@@ -183,6 +198,7 @@ h2 {
   text-transform: uppercase;
   color: var(--recipe-text-color);
   margin-bottom: var(--space-s);
+  margin-top: var(--space-s);
 }
 
 h1 {
@@ -191,11 +207,10 @@ h1 {
   margin-bottom: var(--space-s);
 }
 
-.recipe-card-content button {
+button {
   margin-top: var(--space-m);
   padding: var(--space-s) var(--space-m);
   background-color: var(--main-color);
-  border-radius: 2px;
   color: var(--button-text-color);
   text-transform: uppercase;
 }
@@ -207,9 +222,17 @@ h1 {
   gap: var(--space-m);
 }
 
+.profile-card-avatar {
+  border-radius: 999px;
+  overflow: hidden;
+}
+
 .profile-card {
-  width: 300px;
-  background-color: var(--secondary-color);
+  width: 100%;
+  background-image: url(Images/bg-profile-card.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -225,7 +248,7 @@ h1 {
 }
 
 .category-sidebar {
-  width: 300px;
+  width: 100%;
 }
 
 .sidebar-content {
@@ -237,38 +260,116 @@ h1 {
   color: var(--button-text-color);
 }
 
-.feature-card-top,
-.feature-card-down {
-  width: 300px;
+.feature-card-content {
+  width: 100%;
   height: 350px;
   border: 1px solid var(--secondary-color);
+  text-transform: uppercase;
+  text-align: center;
+  align-content: end;
+  color: var(--secondary-color);
+  padding: var(--space-l);
 }
 
 .feature-card-top {
+  width: 300px;
+  padding: var(--space-m);
   background-image: url(Images/bieres.jpg);
 }
 
 .feature-card-down {
+  width: 300px;
+  padding: var(--space-m);
   background-image: url(Images/cafe.jpg);
+}
+
+.text-style {
+  font-size: 24px;
+}
+
+.gallery-section {
+  justify-content: center;
 }
 
 .gallery-grid {
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   gap: var(--space-m);
+  margin-top: var(--space-m);
+  margin-bottom: var(--space-m);
+}
+
+.gallery-image-container {
+  width: 300px;
+  height: auto;
+  border: 1px solid var(--secondary-color);
+}
+
+.gallery-image-container img {
+  width: 100%;
+  height: 100%;
 }
 
 /*----- MAIN -----*/
 
 /*----- FOOTER -----*/
 footer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   background-image: url(Images/bg-footer.jpg);
   background-position: center;
   background-size: cover;
   padding: var(--space-xl);
+  color: var(--button-text-color);
+}
+
+.footer-logo {
+  display: flex;
+  justify-content: center;
+  margin-bottom: var(--space-l);
+}
+
+.footer-menu .menu-link {
+  color: var(--button-text-color);
 }
 
 .footer-text {
   text-align: center;
+  margin-top: var(--space-s);
 }
 /*----- FOOTER -----*/
+
+/*----- OVERLAY ----- */
+
+.z-index-element {
+  z-index: 20;
+}
+
+.overlay {
+  position: relative;
+}
+
+.overlay::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 10;
+}
+
+.overlay-black::before {
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.overlay-gold::before {
+  background-color: var(--secondary-color);
+  opacity: 0.75;
+}
+
+.overlay-blur::before {
+  filter: blur(5px);
+}
