--- a/current-training/programming/maquette-2/style.css
+++ b/current-training/programming/maquette-2/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  max-width: 100vw;
+  max-width: 950px;
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
 }
@@ -29,10 +29,6 @@ body {
   background-position: center;
   background-size: cover;
   padding: var(--space-xl);
-}
-
-nav {
-  padding-bottom: var(--space-s);
 }
 
 .navbar-container {
@@ -60,7 +56,6 @@ a {
 .search-bar-container {
   display: flex;
   justify-content: center;
-  padding-top: var(--space-s);
 }
 
 .search-logo-container {
@@ -88,22 +83,21 @@ main {
   align-items: center;
   gap: var(--space-l);
   background-color: var(--main-color);
+  padding: var(--space-m);
 }
 
 .category-section {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: var(--space-l);
-  margin-bottom: var(--space-l);
-  gap: var(--space-l);
+  gap: var(--space-m);
 }
 
 .category-img-container-left,
 .category-img-container-middle,
 .category-img-container-right {
-  width: 300px;
-  height: 250px;
+  min-width: 300px;
+  min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -161,9 +155,17 @@ span {
   border-bottom: 1px solid var(--secondary-color);
 }
 
-.recipe-card {
+.recipe-card,
+.recipe-card-secondary {
   max-width: 300px;
   height: auto;
+}
+
+.recipe-card .recipe-card-content p {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .recipe-card-image {
@@ -287,10 +289,6 @@ button {
   font-size: 24px;
 }
 
-.gallery-section {
-  justify-content: center;
-}
-
 .gallery-grid {
   display: grid;
   grid-template-rows: repeat(6, 1fr);
@@ -376,5 +374,115 @@ footer {
 
 /*----- OVERLAY ----- */
 
-/*----- MEDIA QUERIES ----- */
-/*----- MEDIA QUERIES ----- */
+/*----- MEDIA QUERIES TABLET ----- */
+@media screen and (min-width: 964px) and (max-width: 1024px) {
+  body {
+    max-width: 1024px;
+    height: auto;
+  }
+
+  .navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  main {
+    padding: var(--space-m);
+  }
+
+  .category-section {
+    gap: var(--space-m);
+  }
+
+  .main-content {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .main-left {
+    width: 100%;
+  }
+
+  .recipe-card {
+    max-width: 100%;
+  }
+
+  .recipe-card-image {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .recipe-card .recipe-card-content p {
+    display: block;
+    -webkit-line-clamp: unset;
+    -webkit-box-orient: unset;
+    overflow: visible;
+  }
+
+  .gallery-grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+/*----- MEDIA QUERIES TABLET ----- */
+
+/*----- MEDIA QUERIES DESKTOP ----- */
+@media screen and (min-width: 1025px) {
+  body {
+    max-width: 100vw;
+  }
+
+  .navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  main {
+    padding: var(--space-m);
+    justify-content: center;
+  }
+
+  .category-section {
+    max-width: fit-content;
+    gap: var(--space-m);
+  }
+
+  .main-content {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .main-left {
+    width: 100%;
+  }
+
+  .recipe-card {
+    max-width: 100%;
+  }
+
+  .recipe-card-image {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .recipe-card .recipe-card-content p {
+    display: block;
+    -webkit-line-clamp: unset;
+    -webkit-box-orient: unset;
+    overflow: visible;
+  }
+
+  .gallery-grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  footer {
+    flex-direction: row;
+  }
+}
+/*----- MEDIA QUERIES DESKTOP ----- */
