--- a/current-training/programming/javascript/projet-pendu/style.css
+++ b/current-training/programming/javascript/projet-pendu/style.css
@@ -1,6 +1,6 @@
 body {
-  height: 100vh;
-  width: 100vw;
+  max-height: 100vh;
+  max-width: 100vw;
   background-color: pink;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
@@ -9,16 +9,16 @@ body {
 }
 
 h1 {
-  margin-top: 70px;
-  margin-bottom: 150px;
+  font-family: 'Send Flowers', cursive;
+  margin-bottom: 100px;
   color: purple;
   font-size: 48px;
 }
 
 .game-board {
+  max-width: 500px;
   display: grid;
-  grid-template-columns: repeat(2, 400px);
-  grid-template-rows: repeat(2, 200px);
+  grid-template-rows: repeat(3, 200px);
   gap: 40px;
 }
 
@@ -28,29 +28,29 @@ h1 {
   align-items: center;
   flex-direction: column;
   position: relative;
-  grid-column: 1;
-  grid-row: 1 / 3;
 }
 
 .center {
-  width: 160px;
-  height: 160px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   background-color: rgb(238, 238, 134);
   border: 1px solid rgb(141, 141, 0);
+  box-shadow: 2px 2px 2px rgb(141, 141, 0);
   z-index: 1;
 }
 
 .petal {
   position: absolute;
-  width: 250px;
+  width: 150px;
   height: 55px;
-  margin-left: 100px;
-  margin-bottom: 40px;
-  background-color: purple;
+  margin-left: 150px;
+  margin-top: 30px;
+  background-color: rgb(247, 237, 247);
+  box-shadow: 2px 2px 2px rgb(252, 236, 252);
   border-radius: 50%;
   border: 1px solid rgb(73, 2, 73);
-  transform-origin: 30% 90%;
+  transform-origin: 0% 20%;
 }
 
 .petal:nth-child(1) {
@@ -101,15 +101,26 @@ h1 {
   transform: rotate(330deg);
 }
 
-.word {
-  grid-column: 2;
-  grid-row: 1;
+.word-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
 }
 
 .keyboard {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-top: 2px solid rgb(167, 90, 167);
+  border-bottom: 2px solid rgb(167, 90, 167);
+}
+
+.alphabet {
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+
   gap: 10px;
   font-size: 24px;
 }
@@ -118,8 +129,10 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30px;
+  width: 40px;
+  height: 40px;
   border: 1px solid purple;
   border-radius: 6px;
+  box-shadow: 2px 2px 2px;
   color: purple;
 }
