--- a/current-training/programming/javascript/projet-pendu/style.css
+++ b/current-training/programming/javascript/projet-pendu/style.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 h1 {
@@ -16,10 +17,10 @@ h1 {
 }
 
 .game-board {
-  max-width: 700px;
+  width: 800px;
   display: grid;
   grid-template-rows: repeat(3, 200px);
-  gap: 40px;
+  gap: 30px;
 }
 
 .flower {
@@ -104,25 +105,27 @@ h1 {
 .word-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   padding-top: 50px;
-  color: purple;
+  color: rgb(167, 90, 167);
   text-transform: uppercase;
   font-weight: bold;
   font-size: 36px;
+  letter-spacing: 5px;
 }
 
 .keyboard {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   border-top: 2px solid rgb(167, 90, 167);
   border-bottom: 2px solid rgb(167, 90, 167);
 }
 
 .alphabet {
-  max-width: 500px;
+  width: 700px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -140,4 +143,22 @@ h1 {
   border-radius: 6px;
   box-shadow: 2px 2px 2px rgb(167, 90, 167);
   color: purple;
+  cursor: pointer;
+}
+
+button {
+  max-width: fit-content;
+  margin-top: 25px;
+  border: 1px solid purple;
+  box-shadow: 2px 2px 2px white;
+  border-radius: 6px;
+  color: rgb(167, 90, 167);
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  cursor: pointer;
 }
